Reduce delay to unpause occlusion tracker after overview mode ends

This patch is a temporary fix to reduce the delay before occlusion
tracker is unpaused after overview mode is dismissed. It is a temporary
fix to load web contents immediately instead of waiting on the occlusion
tracker for 5 seconds.

Bug: 904617
Change-Id: Ib1d4957638965fd34ffa719c057d234a058d7e08
Component: Window selector controller
Reviewed-on: https://chromium-review.googlesource.com/c/1332717
Reviewed-by: Bernie Thompson <bhthompson@chromium.org>
Cr-Commit-Position: refs/branch-heads/3578@{#647}
Cr-Branched-From: abbd18012032883c3113b3bfc5d59d25b4836c5f [formerly 4226ddf99103e493d7afb23a4c7902ee496108b6]-refs/heads/master@{#599034}
Former-commit-id: fde52fa598322a672348cbe06251c5b8d486a140